--- a/arch/arm/boot/dts/tegra124-meerkat.dtsi
+++ b/arch/arm/boot/dts/tegra124-meerkat.dtsi
@@ -1884,6 +1884,16 @@
 					regulator-max-microvolt = <1200000>;
 					regulator-boot-on;
 					/* CHECK in mainline also regulator-always-on */
+					consumers {
+                                             c1 {
+                                                     regulator-consumer-supply = "avdd_dsi_csi";
+                                                     regulator-consumer-device = "vi.0";
+                                             };
+                                             c2 {
+                                                     regulator-consumer-supply = "avdd_dsi_csi";
+                                                     regulator-consumer-device = "vi.1";
+                                             };
+					};
 				};
 
 				ldo3 {
